Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1716

xerces-c ignores the 'final' attribute and reports a 'derivation by restriction is forbidden' since the global attribute finalDefault is set to "#all"

    XMLWordPrintableJSON

Details

    Description

      Xerces-C ignores the 'final' attribute for the type 'foo' and reports a 'derivation by restriction is forbidden' since the global attribute finalDefault is set to "#all".

      sample:

      <?xml version="1.0"?>
      <xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" finalDefault="#all">
      <xs:complexType name="foo" final="">
      <xs:sequence>
      <xs:element name="myEle1" type="xs:string" minOccurs="0"/>
      <xs:element name="myEle2" type="xs:integer" minOccurs="0"/>
      </xs:sequence>
      </xs:complexType>
      <xs:complexType name="fooType">
      <xs:complexContent>
      <xs:restriction base="foo">
      <xs:sequence>
      <xs:element name="myEle1" type="xs:string"/>
      </xs:sequence>
      </xs:restriction>
      </xs:complexContent>
      </xs:complexType>
      </xs:schema>

      Regards,
      Christian Will

      mail: christian.will@gmail.com

      Attachments

        Activity

          People

            amassari Alberto Massari
            nukleon Christian Will
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: