When parsing a "final" attribute, an empty value means an empty set, not "use finalDefault" (XERCESC-1716)

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@803516 13f79535-47bb-0310-9956-ffa450edef68